--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@tonejs/midi": "^2.0.28",
     "buffer": "^6.0.3",
     "expo": "~51.0.8",
@@ -37,6 +38,7 @@
     "react-native-audio": "^4.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-midi-playback": "^0.1.4",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
