--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-sound": "^0.11.2",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.2",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
